public/stylesheets/mobile.css
/* ... */
  .display_style_line .home-icon .inner:after {
     content: " "; /* Older browser do not support empty content */
     visibility: hidden;
     display: block;
     height: 0;
     clear: both;
  }
  .display_style_line .home-icon .icon {
    margin: 0px;
    background-repeat: no-repeat;
    background-size: contain !important;
    float: left;
  }
  .display_style_line .home-icon .title {
    float: left;
    width: 220px;
    height: auto;
    text-align: left;
    margin-left: 10px;
    line-height: 57px;
    font-size: 18px;
  }

.mobile-footer {
  font-size: 14px;
  width: 100%;
  padding: 12px 0 8px 0;
  background: #c4cde0;
  border-top: solid 1px #1d4088;
  border-bottom: solid 1px #1d4088;
  color: #3b59a0; }
  .mobile-footer a, .mobile-footer a:visited {
    color: inherit; }
  .mobile-footer p {
    margin: 0 0 10px 0;
    padding-left: 5px; }
  .mobile-footer .social-share {
    margin: 0;
    padding: 0 0 0 5px;
    list-style: none; }
    .mobile-footer .social-share li {
      float: left;
      cursor: pointer;
      margin-right: 8px !important; }
  .mobile-footer .powered-by {
    font-size: 14px;
    text-align: center; }

#templates {
  display: none; }

.aritcaptcha-container {
  min-height: 60px;
  max-height: 80px;
  margin-bottom: 4px; }
  .aritcaptcha-container label {
    display: block; }
  .aritcaptcha-container input[type=text] {
    width: 100px !important;
    margin: 5px 0 0 0 !important; }

.clearfix {
  clear: both; }

.page > .content.leave_msg textarea[name="feedback"] {
  width: 95%; }

.page > .content.hours .day-name {
  width: 95px;
  padding-right: 10px;
  font-weight: bold;
  float: left; }
.page > .content.hours .day-hours {
  float: left; }
.page > .content.hours .closed {
  color: #aa0000; }
.page > .content.hours .open {
  color: #007700; }
.page > .content.hours .all-day {
  color: #000099; }

.page > .content.gmap h1 {
  padding-left: 4px; }
.page > .content.gmap p {
  font-weight: bold;
  padding-bottom: 6px; }
.page > .content.gmap .maps {
  height: 305px;
  text-align: center; }
  .page > .content.gmap .maps .map-link {
    margin: 10px 0; }
.page > .content.gmap .directions {
  margin-top: 15px; }
  .page > .content.gmap .directions .banner {
    padding: 2px 0;
    margin-bottom: 4px;
    background: #c4cde0;
    color: #3c59a0;
    font-weight: bold; }

.page > .content.category, .page > .content.page_tree {
  padding: 0 10px 20px 8px !important; }
  .page > .content.category .item-nav, .page > .content.page_tree .item-nav {
    background: #ECEBEB;
    margin: 8px 0;
    padding: 8px 0;
    text-align: center;
    width: 100%; }
    .page > .content.category .item-nav td, .page > .content.page_tree .item-nav td {
      vertical-align: middle; }
    .page > .content.category .item-nav td label, .page > .content.page_tree .item-nav td label {
      margin: 0 !important; }
    .page > .content.category .item-nav button, .page > .content.page_tree .item-nav button {
      margin: 0 10px;
      cursor: pointer; }
    .page > .content.category .item-nav button.disabled, .page > .content.page_tree .item-nav button.disabled {
      visibility: hidden; }
  .page > .content.category table.node-list, .page > .content.page_tree table.node-list {
    width: 100%; }
  .page > .content.category .category .txt-col, .page > .content.page_tree .category .txt-col {
    padding-right: 16px; }
  .page > .content.category td.img-col, .page > .content.page_tree td.img-col {
    width: 10%;
    max-width: 80px;
    background: none !important; }
    .page > .content.category td.img-col img, .page > .content.page_tree td.img-col img {
      /* Optional rounded corners for browsers that support it */
      -moz-border-radius: 0px;
      -webkit-border-radius: 0px;
      -khtml-border-radius: 0px;
      border-radius: 0px; }
  .page > .content.category .item.category td, .page > .content.page_tree .item.category td {
    vertical-align: middle; }
  .page > .content.category .item td, .page > .content.page_tree .item td {
    vertical-align: top;
    padding: 8px 12px 8px 0px;
    font-size: 16px; }
    .page > .content.category .item td .img-col, .page > .content.page_tree .item td .img-col {
      padding-right: 6px; }
    .page > .content.category .item td > div, .page > .content.page_tree .item td > div {
      padding-bottom: 2px; }
    .page > .content.category .item td > :empty, .page > .content.page_tree .item td > :empty {
      padding: 0; }
    .page > .content.category .item td .content, .page > .content.page_tree .item td .content {
      width: 97%;
      float: none; }
  .page > .content.category .item td.nav-col, .page > .content.page_tree .item td.nav-col {
    font-size: 30px;
    font-weight: bold;
    color: #333333;
    margin: 0px;
    padding: 0px;
    width: 10px;
    text-alight: right;
    vertical-align: middle; }
  .page > .content.category .item td, .page > .content.page_tree .item td {
    cursor: pointer; }
  .page > .content.category .item.category, .page > .content.category .item.leaf-name, .page > .content.page_tree .item.category, .page > .content.page_tree .item.leaf-name {
    padding: 8px 20px 8px 0px; }
  .page > .content.category .item:first-child, .page > .content.category .category:first-child, .page > .content.page_tree .item:first-child, .page > .content.page_tree .category:first-child {
    border-top: none; }
  .page > .content.category .c0, .page > .content.category .c1, .page > .content.page_tree .c0, .page > .content.page_tree .c1 {
    border-top: 1px solid #d2d2d2; }
  .page > .content.category .divider, .page > .content.page_tree .divider {
    height: 5px;
    border-top: 1px solid #b3b3b3;
    background: #dddddd;
    margin: 0; }
  .page > .content.category .separator, .page > .content.page_tree .separator {
    background: #b3b3b3;
    height: 1px; }

.page > .content.category .name {
  float: left;
  width: 97%;
  font-size: 16px; }
/* ... */

